fix(search): fix issue with z-index and layout header

--- a/src/framework/theme/components/search/styles/search.component.column-curtain.scss
+++ b/src/framework/theme/components/search/styles/search.component.column-curtain.scss
@@ -12,7 +12,7 @@
 
   display: block;
   position: fixed;
-  z-index: 1000;
+  z-index: 1050;
   top: 0;
   left: 50%;
   overflow: hidden;
@@ -25,22 +25,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 70%;
+    width: 100%;
     height: 100%;
     transform: scale3d(0, 1, 1);
     transform-origin: 0 50%;
     transition: transform 0.3s;
     transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  }
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30%;
-    height: 100%;
-    pointer-events: none;
   }
 
   .search {
@@ -58,7 +48,7 @@
     }
 
     form {
-      width: 70%;
+      width: 85%;
       transform: translate3d(-150%, 0, 0);
       transition: transform 0.3s;
     }
