--- a/src/framework/theme/components/search/styles/search.component.curtain.scss
+++ b/src/framework/theme/components/search/styles/search.component.curtain.scss
@@ -8,7 +8,7 @@
 
   .search {
     position: fixed;
-    z-index: 1000;
+    z-index: 1050;
     top: 0;
     left: 100%;
     overflow: hidden;
