--- a/src/framework/theme/components/search/styles/search.component.layout-rotate.scss
+++ b/src/framework/theme/components/search/styles/search.component.layout-rotate.scss
@@ -44,7 +44,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    z-index: 1000;
+    z-index: 1050;
     position: fixed;
     top: 0;
     left: 0;
