--- a/src/framework/theme/components/search/styles/search.component.modal-half.scss
+++ b/src/framework/theme/components/search/styles/search.component.modal-half.scss
@@ -23,7 +23,7 @@
   .search {
     text-align: center;
     position: fixed;
-    z-index: 1000;
+    z-index: 1050;
     top: 0;
     left: 0;
     overflow: hidden;
