--- a/src/framework/theme/components/search/styles/search.component.modal-zoomin.scss
+++ b/src/framework/theme/components/search/styles/search.component.modal-zoomin.scss
@@ -61,7 +61,7 @@
     align-items: center;
     text-align: center;
     position: fixed;
-    z-index: 1000;
+    z-index: 1050;
     top: 0;
     left: 0;
     width: 100%;
